2008-04-23  Jon Honeycutt  <jhoneycutt@apple.com>

        Reviewed by Adam.

        Fix a crash when performing a hit test on an AccessibilityObject with
        no layer (e.g., an AccessibilityObject for a RenderText object).

        * page/AccessibilityObject.cpp:
        (WebCore::AccessibilityObject::doAccessibilityHitTest): Added a null
        check for layer. Removed a null check for m_renderer, which shouldn't
        occur.

2008-04-23  Jon Honeycutt  <jhoneycutt@apple.com>

        * page/AccessibilityObject.cpp:
        (WebCore::AccessibilityObject::boundingBoxRect): Added FIXME about this
        method not working correctly for objects with CSS transforms applied.

2008-04-23  Jon Honeycutt  <jhoneycutt@apple.com>

        Reviewed by Adam.

        Implement contentsToScreen() and screenToContents() on Windows.

        * platform/ScrollView.h: Make these declarations conditional on
        HAVE(ACCESSIBILITY) instead of PLATFORM(MAC).
        * platform/win/ScrollViewWin.cpp:
        (WebCore::ScrollView::contentsToScreen): Translate from coordinates
        relative to the ScrollView to coordinates relative to the screen. Do
        this by getting the offset of the ScrollView in screen coordinates and
        moving the rect by this amount.
        (WebCore::ScrollView::screenToContents): Translate from coordinates
        relative to the screen to coordinates relative to the ScrollView.

2008-04-23  Jon Honeycutt  <jhoneycutt@apple.com>

        Reviewed by Oliver.

        Add a method to get a localized, human-readable string stating this
        object's default action, e.g., a button's default action is "press."

        * page/AccessibilityObject.cpp:
        (WebCore::AccessibilityObject::actionVerb): Added.
        * page/AccessibilityObject.h: Added declaration for actionVerb().
        * platform/LocalizedStrings.h: Added declarations for:
            AXButtonActionVerb()
            AXRadioButtonActionVerb()